# hello_solana_dapp

./: .gitignore  .prettierignore  LICENSE  README.md  codama.json  eslint.config.mjs  package-lock.json  package.json  rpc_api.md  solana_cli.md  tsconfig.json
anchor/: Anchor.toml  Cargo.toml  README.md
anchor/programs/anchor_favorites/: Cargo.toml
anchor/programs/anchor_favorites/src/: lib.rs
anchor/programs/anchor_favorites/tests/: favorites_litesvm.rs
anchor/programs/bank/: Cargo.toml
anchor/programs/bank/src/: lib.rs
anchor/programs/counter/: Cargo.toml
anchor/programs/counter/src/: lib.rs
anchor/programs/emit_log/: Cargo.toml
anchor/programs/emit_log/src/: lib.rs
anchor/programs/tokenbank/: Cargo.toml
anchor/programs/tokenbank/src/: lib.rs
anchor/programs/vault/src/: lib.rs
anchor/test-support/: surfpool_setup.js
anchor/tests/: bank.ts  emit_log.ts  favorites.ts  tokenbank.ts
app/: page.tsx
app/account/: page.tsx
app/components/: account-card.tsx  app-header.tsx  favorites-card.tsx
app/favorites/: page.tsx
scripts/backend/: tsconfig.json
scripts/backend/src/: bank_deposit.ts  config.ts  counter.ts  get_all_favorites_pdas.ts  index.ts  keypair_to_base58.ts  listen_favorites.ts  measure_cu.ts  scan_bank.ts  scan_favorites.ts  scan_favorites_by_block.ts  scan_favorites_with_coder.ts  scan_sol_transfers.ts  spl_token_operations.ts  transfer_sol.ts
scripts/backend/src/examples/: instruction_encoding_demo.ts
scripts/backend/src/idl/: bank.json  emit_log.json  (+3 more)
solpg_demo/: demo1_lib.rs  demo2_libs.rs  demo3_libs.rs
(+7 files in other folders)
